# charmy

./: .gitignore  NOTICE  README.md  main.py  pyproject.toml
aqua/: __init__.py  const.py  object.py  pos.py  size.py
aqua/widgets/: __init__.py  app.py  container.py  window.py  windowbase.py
charmy/: __init__.py  __main__.py  _event.py  cm_object.py  cmm.py  const.py  draw.py  event.py  framework.py  graphics.py  object.py  pos.py  rect.py  size.py  this.py  var.py
charmy/backend/: __init__.py  genesis.py  loader.py  template.py  utils.py
charmy/drawing/: __init__.py  canvas.py
charmy/frameworks/: __init__.py  drawing.py
charmy/resources/themes/: dark.json  light.json  sv_1light.json  sv_2dark.json
charmy/styles/: __init__.py  _theme.py  color.py  font.py  shape.py  style.py  text_style.py  texture.py  theme.py
charmy/utils/: __init__.py  caching.py  event_types.py  geo_math.py  layout_profiles.py  marks.py  svg.py  type_checking.py  var.py
charmy/widgets/: __init__.py  app.py  button.py  canvas.py  cmm.py  container.py  frame.py  skhynix.py  widget.py  window.py  windowbase.py
charmy_drawing/: forskia.py
docs/source/: _fix_headers.py  conf.py  contribution.rst  index.rst
docs/source/api/: autoapi.py  const.rst  event.rst  index.rst  object.rst  pos.rst  rect.rst  size.rst  this.rst
docs/source/api/backend/: genesis.rst  index.rst  (+3 more)
docs/source/getstarted/: first_app.rst  index.rst  install.rst  layout.rst  window_config.rst
docs/source/how_does_it_work/: index.rst  message_loop.rst
tests/: __init__.py  button.py  c.py  color.py  event.py  graphics.py  nested.py  object.py  pylance_abilities.py  shape_hit_test.py  svg.py
(+19 files in other folders)
