[project]
name = "aquaui"
version = "0.1.0"
description = ""
authors = [
    {name = "XiangQinxi",email = "XiangQinxi@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "suzaku"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
